--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,43 +1,30 @@
-name: C Tests
+name: Build and Test
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 jobs:
-  build-and-test:
+  build:
+    name: Build and run tests on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest]
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up build tools (Ubuntu)
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt update
-        sudo apt install -y build-essential
+      - name: Setup MinGW (Windows only)
+        if: runner.os == 'Windows'
+        uses: egor-tensin/setup-mingw@v2
+        with:
+          platform: x64
 
-    - name: Set up build tools (Windows)
-      if: matrix.os == 'windows-latest'
-      run: |
-        choco install mingw -y
-        refreshenv
+      - name: Build project
+        run: make all
 
-    - name: Create build directories
-      run: |
-        mkdir -p obj lib test
-
-    - name: Build library
-      run: make lib
-
-    - name: Build tests
-      run: make test
-
-    - name: Run tests
-      run: test/run
+      - name: Run tests
+        run: |
+          ./test/run || test\run.exe
